--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@cosmjs/proto-signing": "^0.31.1",
+    "@cosmjs/stargate": "^0.31.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hoangdv2429/liquid_staking": "^0.0.1",
+    "framer-motion": "^10.16.4",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
